--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@ a {
 .col-2 h3 {
     color: white;
     display: flex;
-    justify-content: right;
+    justify-content: center;
     background-color: #992330;
 }
 
@@ -99,4 +99,9 @@ a {
     .col-11 { width: 91.66%; }
     .col-12 { width: 100%; }
 
+}
+
+.img-responsive {
+    height: auto;
+    width: 100%;
 }
