added media queries

--- a/css/style.css
+++ b/css/style.css
@@ -66,18 +66,7 @@ a {
     box-sizing: border-box;
 }
 
-.col-1 { width: 8.33%; }
-.col-2 { width: 16.66%; }
-.col-3 { width: 25%; }
-.col-4 { width: 33.33%; }
-.col-5 { width: 41.66%; }
-.col-6 { width: 50%; }
-.col-7 { width: 58.33%; }
-.col-8 { width: 66.66%; }
-.col-9 { width: 75%; }
-.col-10 { width: 83.33%; }
-.col-11 { width: 91.66%; }
-.col-12 { width: 100%; }
+
 
 
 .row {
@@ -104,4 +93,48 @@ a {
 .img-responsive {
     height: auto;
     width: 100%;
+}
+
+@media only screen and (max-width: 768px) {
+
+    .col-1 { width: 8.33%; }
+    .col-2 { width: 100%; }
+    .col-3 { width: 25%; }
+    .col-4 { width: 33.33%; }
+    .col-5 { width: 41.66%; }
+    .col-6 { width: 50%; }
+    .col-7 { width: 58.33%; }
+    .col-8 { width: 66.66%; }
+    .col-9 { width: 75%; }
+    .col-10 { width: 100%; }
+    .col-11 { width: 91.66%; }
+    .col-12 { width: 100%; }
+
+}
+
+.topnav {
+    overflow: hidden;
+    background-color: #A11D22;
+
+}
+
+.topnav a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+    justify-content: center;
+}
+
+.topnav a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+.topnav a.active {
+    background-color: #4CAF50;
+    color: white;
 }
